Revert "fix spacing issue" This reverts commit 3d795c0d6c6f32857126e45037841b92ac27d141.

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,9 @@ html {
   overflow-x: hidden;
 }
 
+.container {
+  position: relative;
+}
 .hero a:hover {
   background-color: #00ff6c;
   color: #000;
@@ -42,7 +45,6 @@ a {
 nav a {
   font-size: 2rem;
 }
-
 header {
   position: absolute;
   width: 100%;
@@ -63,14 +65,6 @@ header {
   align-items: center;
   flex-direction: column;
   text-align: center;
-}
-.hero a {
-  outline: 2px solid #fff;
-  border: none;
-}
-.hero a:hover {
-  outline-offset: -1rem;
-  outline-color: #000;
 }
 .primary-heading {
   font-size: 3rem;
@@ -209,13 +203,14 @@ footer {
     font-size: 2rem;
     margin-bottom: 2rem;
     grid-column: 1/-1;
+    padding: 0 2rem;
   }
 }
 .footer-nav {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   font-size: 2rem;
-  padding: 0 2rem;
+
   ul {
     list-style-type: none;
     justify-self: center;
@@ -233,7 +228,7 @@ footer {
   }
 }
 @media (min-width: 61.25rem) {
-  .logo {
+  .logo{
     width: 15rem;
   }
   .hero {
